--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="/styles/style.css">
 </head>
-<body>
-  <div class="page">
+
+<body class="page">
+  <!-- <div class="logo logo_place_header"><img src="/images/logo_place_header.svg" alt="logo-header"></div> -->
+  <div class="header">
+  <div class="logo logo_place_header"><img src="/images/logo_place_header.svg" alt="logo-header"></div>
+
+    <h1 class="header__title">
+      Научиться учиться
+    </h1>
+    <p class="header__subtitle">Какие современные и эффективные
+      подходы к обучению вы можете
+      использовать в своей жизни?<a href="#">Узнать</a></p>
+    <div class="header__link"></div>
+    <div class="header__main-illustration"><img src="/images/header-image.png" alt="boy" width="765px" height="608px">
+    </div>
+    <div class="header__square-pic"></div>
+  </div>
+
+
+
 
   </div>
 </body>
+
 </html>
