--- a/index.html
+++ b/index.html
@@ -1,34 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Научиться учиться</title>
+    <link rel="stylesheet" href="/styles/normalize.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
-  <link rel="stylesheet" href="/styles/style.css">
-</head>
+  <body class="page">
+    <!-- <div class="logo logo_place_header"><img src="/images/logo_place_header.svg" alt="logo-header"></div> -->
+    <header class="header">
+      <div class="logo logo_place_header">
+        <img src="/images/logo_place_header.svg" alt="logo-header" />
+      </div>
+      <section class="header__title">Научиться учиться</section>
+      <p class="header__subtitle">
+        Какие современные и эффективные подходы к обучению вы можете
+        использовать в своей жизни?<a href="#" class="header__link">Узнать</a>
+      </p>
+      <div class="header__main-illustration">
+        <img
+          src="/images/header-image.png"
+          alt="boy"
+          width="765px"
+          height="608px"
+        />
+      </div>
+      <div class="header__square-pic"></div>
+    </header>
 
-<body class="page">
-  <!-- <div class="logo logo_place_header"><img src="/images/logo_place_header.svg" alt="logo-header"></div> -->
-  <div class="header">
-  <div class="logo logo_place_header"><img src="/images/logo_place_header.svg" alt="logo-header"></div>
-
-    <h1 class="header__title">
-      Научиться учиться
-    </h1>
-    <p class="header__subtitle">Какие современные и эффективные
-      подходы к обучению вы можете
-      использовать в своей жизни?<a href="#">Узнать</a></p>
-    <div class="header__link"></div>
-    <div class="header__main-illustration"><img src="/images/header-image.png" alt="boy" width="765px" height="608px">
-    </div>
-    <div class="header__square-pic"></div>
-  </div>
-
-
-
-
-  </div>
-</body>
-
+    <section class="description">
+      <div class="two-columns">
+        <h6 class="two-columns__brief">Главные проблемы в обучении</h6>
+        <div class="two-columns__main-text">
+          <section class="two-columns__paragraph">
+            Ни в школе, ни в институте нас не учат тому, как правильно изучать
+            материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся
+            решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге
+            это не дает нам реального знания. Зубрежка быстро выветривается и не
+            приносит пользы.
+          </section>
+          <section class="two-columns__paragraph">
+            <span class="two-columns__span-accent">Вывод:</span> учиться тоже
+            нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+          </section>
+          <section class="two-columns__paragraph">
+            Конкретные техники и упражнения помогают изменить подход к обучению,
+            сделать его эффективным и захватывающим. Эти же техники применяются
+            на примере обучения в Практикуме.
+          </section>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
