--- a/index.html
+++ b/index.html
@@ -53,5 +53,312 @@
         </div>
       </div>
     </section>
+
+    <section class="techniques">
+      <h2 class="section-title">Техники обучения</h2>
+      <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+      <div class="cards">
+        <div class="cards__item">
+          <img
+            src="/images/cards-attention.png"
+            alt="attention"
+            class="cards__image"
+          />
+          <div class="cards__title"><h4>Два вида внимания</h4></div>
+          <div class="cards__description">
+            Глубокие знания возникают, если чередовать сфокусированное и
+            рассеянное мышление
+          </div>
+        </div>
+
+        <div class="cards__item">
+          <img
+            src="/images/cards-interliving.png"
+            alt="attention"
+            class="cards__image"
+          />
+          <div class="cards__title"><h4>Recall</h4></div>
+          <div class="cards__description">
+            Вспоминайте изученное — это позволит соединить разрозненные порции
+            памяти
+          </div>
+        </div>
+
+        <div class="cards__item">
+          <img
+            src="/images/cards-interliving.png"
+            alt="attention"
+            class="cards__image"
+          />
+          <div class="cards__title"><h4>Интерливинг</h4></div>
+          <div class="cards__description">
+            Изучайте несколько навыков одновременно, они обогащают друг друга
+          </div>
+        </div>
+
+        <div class="cards__item">
+          <img
+            src="/images/cards-question.png"
+            alt="attention"
+            class="cards__image"
+          />
+          <div class="cards__title"><h4>Вопросы</h4></div>
+          <div class="cards__description">
+            Слушая преподавателя, придумывайте хороший вопрос, который вас
+            действительно волнует
+          </div>
+        </div>
+
+        <div class="cards__item">
+          <img
+            src="/images/cards-competence.png"
+            alt="attention"
+            class="cards__image"
+          />
+          <div class="cards__title"><h4>Иллюзия компетентности</h4></div>
+          <div class="cards__description">
+            Повторите про себя, запишите, расскажите другу: вам только кажется,
+            что вы владеете новой темой
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="digits">
+      <h2 class="section-title">Цифры и факты</h2>
+      <h3 class="section-subtitle">Про учебу и мозг</h3>
+      <div class="table">
+        <div class="table__cell">
+          <h4 class="table__heading">86 миллиардов</h4>
+          <p class="table__text">Число нейронов в мозге человека</p>
+        </div>
+
+        <div class="table__cell">
+          <h4 class="table__heading">2.1 миллиарда</h4>
+          <p class="table__text">Число нуждающихся в повышении квалификации</p>
+          <p class="table__text_margin">Всемирный Банк, 2017</p>
+          <!-- </p> -->
+        </div>
+
+        <div class="table__cell">
+          <h4 class="table__heading">1000 терабайт</h4>
+          <p class="table__text">Объём памяти человека</p>
+        </div>
+
+        <div class="table__cell">
+          <h4 class="table__heading">500 триллионов</h4>
+          <p class="table__text">
+            Число ответственных за обучение нервных синапсов у взрослого
+            человека
+          </p>
+        </div>
+
+        <div class="table__cell">
+          <h4 class="table__heading">420 миллионов</h4>
+          <p class="table__text">
+            Число взрослых людей моложе 25 лет, не имеющих образования для
+            трудоустройства
+          </p>
+          <p class="table__text_margin">Всемирный Банк, 2017</p>
+          <!-- </p> -->
+        </div>
+
+        <div class="table__cell">
+          <h4 class="table__heading">17–20 лет</h4>
+          <p class="table__text">Пик обучаемости</p>
+        </div>
+
+        <div class="table__cell">
+          <h4 class="table__heading">1885 год</h4>
+          <p class="table__text">Открытие кривой забывания</p>
+        </div>
+
+        <div class="table__cell">
+          <h4 class="table__heading">1889 год</h4>
+          <p class="table__text">Открытие условного рефлекса</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="kaufman">
+      <h2 class="section-title_theme_dark">Принципы обучения</h2>
+      <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+      <div class="table_theme_dark">
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading_theme_dark">1</h4>
+          <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+        </div>
+
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading_theme_dark">2</h4>
+          <p class="table__text_theme_dark"></p>
+          <p>Сосредоточьтесь на каком-то одном навыке</p>
+        </div>
+
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading_theme_dark">3</h4>
+          <p class="table__text_theme_dark">
+            Определите целевой уровень мастерства
+          </p>
+        </div>
+
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading_theme_dark">4</h4>
+          <p class="table__text_theme_dark">Разбейте навык на элементы</p>
+        </div>
+
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading_theme_dark">5</h4>
+          <p class="table__text_theme_dark">
+            Приготовьте всё необходимое для занятий
+          </p>
+        </div>
+
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading_theme_dark">6</h4>
+          <p class="table__text_theme_dark">
+            Устраните препятствия для занятий
+          </p>
+        </div>
+
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading_theme_dark">7</h4>
+          <p class="table__text_theme_dark">
+            Выделите специальное время для занятий.
+          </p>
+        </div>
+
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading_theme_dark">8</h4>
+          <p class="table__text_theme_dark">
+            Создайте быстрые петли обратной связи
+          </p>
+        </div>
+
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading_theme_dark">9</h4>
+          <p class="table__text_theme_dark">
+            Занимайтесь по расписанию, короткими интенсивными интервалами.
+          </p>
+        </div>
+
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading_theme_dark">10</h4>
+          <p class="table__text_theme_dark">
+            Уделяйте внимание количеству и скорости
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="resources">
+      <h2 class="section-title_resources">Полезные ресурсы</h2>
+      <h3 class="section-subtitle_resources">
+        Больше материалов о техниках и лайфхаках обучения
+      </h3>
+      <div class="resources__logo-zone">
+        <a href="#" class="resources__link">
+          <img
+            src="/images/logo/resources-arzamas.svg"
+            alt="arzamas"
+            width="270px"
+            height="38px"
+          />
+        </a>
+        <a href="#" class="resources__link">
+          <img
+            src="/images/logo/resources-n1.svg"
+            alt="n1"
+            width="270px"
+            height="38px"
+          />
+        </a>
+        <a href="#" class="resources__link">
+          <img
+            src="/images/logo/resources-strelka.svg"
+            alt="strelka"
+            width="270px"
+            height="38px"
+          />
+        </a>
+        <a href="#" class="resources__link">
+          <img
+            src="/images/logo/resources-polka.svg"
+            alt="polka"
+            width="270px"
+            height="38px"
+          />
+        </a>
+      </div>
+    </section>
+
+    <div class="footer">
+      <div class="columns">
+        <div class="column_content_copyright">
+          <div class="logo logo_place_footer">
+            <img
+              src="/images/logo_place_footer.svg"
+              alt="logo-footer"
+              width="228px"
+              height="32px"
+            />
+          </div>
+          <section class="footer__author">&copy Павел Зайцев</section>
+        </div>
+
+        <div class="column_content_info">
+          <h3 class="column-heading">О практикуме</h3>
+          <div class="column-links">
+            <p class="column-link">
+              <a href="#" class="column-link">Главная</a>
+            </p>
+            <p class="column-link">
+              <a href="#" class="column-link">Концепция</a>
+            </p>
+            <p class="column-link">
+              <a href="#" class="column-link">Наставники</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="column_content_social">
+          <h3 class="column-heading">Соцсети</h3>
+          <div class="column-links">
+            <p class="column-link">
+              <a href="#" class="social-icon"
+                ><img
+                  src="/youtube-icon.svg"
+                  alt="youtube"
+                  width="16px"
+                  height="16px"
+              /></a>
+              <a href="#" class="column-link">YouTube</a>
+            </p>
+            <p class="column-link">
+              <a href="#" class="social-icon"
+                ><img
+                  src="/images/vk_color_white.svg"
+                  alt="youtube"
+                  width="16px"
+                  height="16px"
+              /></a>
+
+              <a href="#" class="column-link">ВКонтакте</a>
+            </p>
+            <p class="column-link">
+              <a href="#" class="social-icon"
+                ><img
+                  src="/tiktok-icon.svg"
+                  alt="youtube"
+                  width="16px"
+                  height="16px"
+              /></a>
+
+              <a href="#" class="column-link">TikTok</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
