--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="logo logo_place_header">
         <img src="/images/logo_place_header.svg" alt="logo-header" />
       </div>
-      <section class="header__title">Научиться учиться</section>
+      <p class="header__title">Научиться учиться</p>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете
         использовать в своей жизни?<a href="#" class="header__link">Узнать</a>
@@ -21,38 +21,38 @@
         <img
           src="/images/header-image.png"
           alt="boy"
-          width="765px"
-          height="608px"
+          width="765"
+          height="608"
         />
       </div>
-      <div class="header__square-pic rotate"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
         <div class="two-columns">
           <h6 class="two-columns__brief">Главные проблемы в обучении</h6>
           <div class="two-columns__main-text">
-            <section class="two-columns__paragraph">
+            <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать
               материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся
               решать однообразные задачи, чтобы лучше сдать тест, но часто в
               итоге это не дает нам реального знания. Зубрежка быстро
               выветривается и не приносит пользы.
-            </section>
-            <section class="two-columns__paragraph">
+            </p>
+            <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод:</span> учиться тоже
               нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-            </section>
-            <section class="two-columns__paragraph">
+            </p>
+            <p class="two-columns__paragraph">
               Конкретные техники и упражнения помогают изменить подход к
               обучению, сделать его эффективным и захватывающим. Эти же техники
               применяются на примере обучения в Практикуме.
-            </section>
+            </p>
           </div>
         </div>
       </section>
 
-      <div class="techniques">
+      <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
         <div class="cards">
@@ -120,16 +120,16 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <section class="video">
-        <div class="section-title">Видео на TED</div>
-        <div class="section-subtitle">Для тех, кто любит прокрастинировать</div>
+        <h2 class="section-title">Видео на TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
           <div class="video__iframe">
             <iframe
-              width="515px"
-              height="316px"
+              width="515"
+              height="316"
               src="https://www.youtube.com/embed/5MgBikgcWnY"
               title="YouTube video player"
               frameborder="0"
@@ -139,8 +139,8 @@
           </div>
           <div class="video__iframe">
             <iframe
-              width="515px"
-              height="315px"
+              width="515"
+              height="315"
               src="https://www.youtube.com/embed/arj7oStGLkU"
               title="YouTube video player"
               frameborder="0"
@@ -155,7 +155,7 @@
         <div class="two-columns">
           <h6 class="two-columns__brief">История Барбары Оакли</h6>
           <div class="two-columns__main-text">
-            <section class="two-columns__paragraph">
+            <p class="two-columns__paragraph">
               С детства Барбаре не давалась математика. Она считала себя
               законченным гуманитарием, причём далеко не самым умным. В армии
               она изучала русский язык, чтобы получить надбавку, да так успешно,
@@ -164,7 +164,7 @@
               точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
               добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с
               первого взгляда.
-            </section>
+            </p>
           </div>
         </div>
       </section>
@@ -233,19 +233,17 @@
 
       <section class="khan">
         <div class="khan__container">
-          <section class="khan__author">Салман Хан</section>
+          <p class="khan__author">Салман Хан</p>
           <h3 class="khan__title">Весь мир — школа</h3>
-          <section class="khan__quote">
+          <p class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов
             студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
             всем, кто занимается образованием — так учащиеся повсюду смогут
             получить навыки и знания, которые приносят успех в школе, карьере и
             жизни.
-          </section>
-          <section class="khan__quote-author">Джордж Лукас</section>
-          <section class="khan__quote-author-subline">
-            Кинорежиссер, продюсер
-          </section>
+          </p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img
               class="khan__book-pic"
@@ -258,8 +256,8 @@
       </section>
 
       <section class="kaufman">
-        <div class="kaufman__triangle rotate">
-          <img src="/images/kaufman-triangle.svg" alt="kaufman-triangle">
+        <div class="kaufman__triangle rotation">
+          <img src="/images/kaufman-triangle.svg" alt="kaufman-triangle" />
         </div>
         <h2 class="section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
@@ -343,49 +341,49 @@
             <img
               src="/images/logo/resources-arzamas.svg"
               alt="arzamas"
-              width="270px"
-              height="38px"
+              width="270"
+              height="38"
             />
           </a>
           <a href="#" class="resources__link">
             <img
               src="/images/logo/resources-n1.svg"
               alt="n1"
-              width="270px"
-              height="38px"
+              width="270"
+              height="38"
             />
           </a>
           <a href="#" class="resources__link">
             <img
               src="/images/logo/resources-strelka.svg"
               alt="strelka"
-              width="270px"
-              height="38px"
+              width="270"
+              height="38"
             />
           </a>
           <a href="#" class="resources__link">
             <img
               src="/images/logo/resources-polka.svg"
               alt="polka"
-              width="270px"
-              height="38px"
+              width="270"
+              height="38"
             />
           </a>
         </div>
       </section>
     </main>
-    <div class="footer">
+    <section class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
           <div class="logo logo_place_footer">
             <img
               src="/images/logo_place_footer.svg"
               alt="logo-footer"
-              width="228px"
-              height="32px"
+              width="228"
+              height="32"
             />
           </div>
-          <section class="footer__author">&copy Павел Зайцев</section>
+          <p class="footer__author">&copy;Павел Зайцев</p>
         </div>
 
         <div class="footer__column_content_info">
@@ -411,8 +409,8 @@
                 ><img
                   src="/youtube-icon.svg"
                   alt="youtube"
-                  width="16px"
-                  height="16px"
+                  width="16"
+                  height="16"
               /></a>
               <a href="#" class="footer__column-link">YouTube</a>
             </p>
@@ -421,8 +419,8 @@
                 ><img
                   src="/images/vk_color_white.svg"
                   alt="youtube"
-                  width="16px"
-                  height="16px"
+                  width="16"
+                  height="16"
               /></a>
 
               <a href="#" class="footer__column-link">ВКонтакте</a>
@@ -432,8 +430,8 @@
                 ><img
                   src="/tiktok-icon.svg"
                   alt="youtube"
-                  width="16px"
-                  height="16px"
+                  width="16"
+                  height="16"
               /></a>
 
               <a href="#" class="footer__column-link">TikTok</a>
@@ -441,6 +439,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
