--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
             <p class="footer__column-link">
               <a href="#" class="footer__social-icon"
                 ><img
-                  src="/youtube-icon.svg"
+                  src="/images/youtube-icon.svg"
                   alt="youtube"
                   width="16"
                   height="16"
@@ -418,7 +418,7 @@
               <a href="#" class="social-icon"
                 ><img
                   src="/images/vk_color_white.svg"
-                  alt="youtube"
+                  alt="vk"
                   width="16"
                   height="16"
               /></a>
@@ -428,8 +428,8 @@
             <p class="footer__column-link">
               <a href="#" class="footer__social-icon"
                 ><img
-                  src="/tiktok-icon.svg"
-                  alt="youtube"
+                  src="/images/tiktok-icon.svg"
+                  alt="tiktok"
                   width="16"
                   height="16"
               /></a>
