--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="/pages/index.css" />
+    <link rel="stylesheet" href="pages/index.css" />
   </head>
 
   <body class="page">
     <header class="header">
       <div class="logo logo_place_header">
-        <img src="/images/logo_place_header.svg" alt="logo-header" />
+        <img src="images/logo_place_header.svg" alt="logo-header" />
       </div>
       <p class="header__title">Научиться учиться</p>
       <p class="header__subtitle">
@@ -18,12 +18,7 @@
         использовать в своей жизни?<a href="#" class="header__link">Узнать</a>
       </p>
       <div class="header__main-illustration">
-        <img
-          src="/images/header-image.png"
-          alt="boy"
-          width="765"
-          height="608"
-        />
+        <img src="images/header-image.png" alt="boy" width="765" height="608" />
       </div>
       <div class="header__square-pic rotation"></div>
     </header>
@@ -58,7 +53,7 @@
         <div class="cards">
           <div class="cards__item">
             <img
-              src="/images/cards-attention.png"
+              src="images/cards-attention.png"
               alt="attention"
               class="cards__image"
             />
@@ -71,7 +66,7 @@
 
           <div class="cards__item">
             <img
-              src="/images/cards-recall.png"
+              src="images/cards-recall.png"
               alt="attention"
               class="cards__image"
             />
@@ -84,7 +79,7 @@
 
           <div class="cards__item">
             <img
-              src="/images/cards-interliving.png"
+              src="images/cards-interliving.png"
               alt="attention"
               class="cards__image"
             />
@@ -96,7 +91,7 @@
 
           <div class="cards__item">
             <img
-              src="/images/cards-question.png"
+              src="images/cards-question.png"
               alt="attention"
               class="cards__image"
             />
@@ -109,7 +104,7 @@
 
           <div class="cards__item">
             <img
-              src="/images/cards-competence.png"
+              src="images/cards-competence.png"
               alt="attention"
               class="cards__image"
             />
@@ -245,11 +240,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img
-              class="khan__book-pic"
-              src="/images/khan-book.jpg"
-              alt="Khan"
-            />
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Khan" />
             <a href="#" class="khan__buy-link">Купить книгу -></a>
           </div>
         </div>
@@ -257,7 +248,7 @@
 
       <section class="kaufman">
         <div class="kaufman__triangle rotation">
-          <img src="/images/kaufman-triangle.svg" alt="kaufman-triangle" />
+          <img src="images/kaufman-triangle.svg" alt="kaufman-triangle" />
         </div>
         <h2 class="section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
@@ -339,7 +330,7 @@
         <div class="resources__logo-zone">
           <a href="#" class="resources__link">
             <img
-              src="/images/logo/resources-arzamas.svg"
+              src="images/logo/resources-arzamas.svg"
               alt="arzamas"
               width="270"
               height="38"
@@ -347,7 +338,7 @@
           </a>
           <a href="#" class="resources__link">
             <img
-              src="/images/logo/resources-n1.svg"
+              src="images/logo/resources-n1.svg"
               alt="n1"
               width="270"
               height="38"
@@ -355,7 +346,7 @@
           </a>
           <a href="#" class="resources__link">
             <img
-              src="/images/logo/resources-strelka.svg"
+              src="images/logo/resources-strelka.svg"
               alt="strelka"
               width="270"
               height="38"
@@ -363,7 +354,7 @@
           </a>
           <a href="#" class="resources__link">
             <img
-              src="/images/logo/resources-polka.svg"
+              src="images/logo/resources-polka.svg"
               alt="polka"
               width="270"
               height="38"
@@ -377,7 +368,7 @@
         <div class="footer__column_content_copyright">
           <div class="logo logo_place_footer">
             <img
-              src="/images/logo_place_footer.svg"
+              src="images/logo_place_footer.svg"
               alt="logo-footer"
               width="228"
               height="32"
@@ -407,7 +398,7 @@
             <p class="footer__column-link">
               <a href="#" class="footer__social-icon"
                 ><img
-                  src="/images/youtube-icon.svg"
+                  src="images/youtube-icon.svg"
                   alt="youtube"
                   width="16"
                   height="16"
@@ -417,7 +408,7 @@
             <p class="footer__column-link">
               <a href="#" class="social-icon"
                 ><img
-                  src="/images/vk_color_white.svg"
+                  src="images/vk_color_white.svg"
                   alt="vk"
                   width="16"
                   height="16"
@@ -428,7 +419,7 @@
             <p class="footer__column-link">
               <a href="#" class="footer__social-icon"
                 ><img
-                  src="/images/tiktok-icon.svg"
+                  src="images/tiktok-icon.svg"
                   alt="tiktok"
                   width="16"
                   height="16"
