--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете
-        использовать в своей жизни?<a href="#" class="header__link"
+        использовать в своей жизни?<a href="#" class="header__link" target="_blank"
           >Узнать &rarr;</a
         >
       </p>
@@ -31,7 +31,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h1 class="two-columns__brief">Главные проблемы в обучении</h1>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать
@@ -54,7 +54,7 @@
       </section>
 
       <section class="techniques">
-        <h1 class="section-title">Техники обучения</h1>
+        <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
@@ -124,27 +124,21 @@
       </section>
 
       <section class="video">
-        <h1 class="section-title">Видео на TED</h1>
+        <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe
             class="video__iframe"
-            width="515"
-            height="316"
             src="https://www.youtube.com/embed/5MgBikgcWnY"
             title="YouTube video player"
-            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
 
           <iframe
             class="video__iframe"
-            width="515"
-            height="315"
             src="https://www.youtube.com/embed/arj7oStGLkU"
             title="YouTube video player"
-            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
@@ -153,7 +147,7 @@
 
       <section class="oakley">
         <div class="two-columns">
-          <h1 class="two-columns__brief">История Барбары Оакли</h1>
+          <h2 class="two-columns__brief">История Барбары Оакли</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               С детства Барбаре не давалась математика. Она считала себя
@@ -170,13 +164,13 @@
       </section>
 
       <section class="feynman">
-        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <a href="#" class="feynman__link" target="_blank">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
-        <h1 class="section-title">Цифры и факты</h1>
+        <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
         <div class="table">
           <div class="table__cell">
@@ -234,7 +228,7 @@
       <section class="khan">
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
-          <h1 class="khan__title">Весь мир — школа</h1>
+          <h2 class="khan__title">Весь мир — школа</h2>
           <p class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов
             студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
@@ -263,9 +257,9 @@
           alt="Треугольник"
         />
 
-        <h1 class="section-title section-title_theme_dark">
+        <h2 class="section-title section-title_theme_dark">
           Принципы обучения
-        </h1>
+        </h2>
         <p class="section-subtitle section-subtitle_theme_dark">
           от Джоша Кауфмана
         </p>
@@ -342,33 +336,33 @@
       </section>
 
       <section class="resources">
-        <h1 class="section-title section-title_resources">Полезные ресурсы</h1>
+        <h2 class="section-title section-title_resources">Полезные ресурсы</h2>
         <p class="section-subtitle section-subtitle_resources">
           Больше материалов о техниках и лайфхаках обучения
         </p>
         <div class="resources__logo-zone">
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               class="resources__link"
               src="images/logo/resources-arzamas.svg"
               alt="Арзамас"
             />
           </a>
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               class="resources__link"
               src="images/logo/resources-n1.svg"
               alt="Н+1"
             />
           </a>
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               class="resources__link"
               src="images/logo/resources-strelka.svg"
               alt="Стрелка"
             />
           </a>
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               class="resources__link"
               src="images/logo/resources-polka.svg"
@@ -391,31 +385,25 @@
         </div>
 
         <nav class="footer__column footer__column_content_info">
-          <h1 class="footer__column-heading">О практикуме</h1>
+          <h2 class="footer__column-heading">О практикуме</h2>
           <ul class="footer__column-links">
-            <li class="footer__column-link">
-              <a style="color: white; text-decoration: none" href="#"
-                >Главная</a
-              >
+            <li>
+              <a class="footer__column-link" href="#">Главная</a>
             </li>
-            <li class="footer__column-link">
-              <a style="color: white; text-decoration: none" href="#"
-                >Концепция</a
-              >
+            <li>
+              <a class="footer__column-link" href="#">Концепция</a>
             </li>
-            <li class="footer__column-link">
-              <a style="color: white; text-decoration: none" href="#"
-                >Наставники</a
-              >
+            <li>
+              <a class="footer__column-link" href="#">Наставники</a>
             </li>
           </ul>
         </nav>
 
         <nav class="footer__column_content_social">
-          <h1 class="footer__column-heading">О практикуме</h1>
+          <h2 class="footer__column-heading">О практикуме</h2>
           <ul class="footer__column-links">
-            <li class="footer__column-link">
-              <a style="color: white; text-decoration: none" href="#"
+            <li>
+              <a class="footer__column-link" href="#" target="_blank"
                 ><img
                   class="footer__social-icon"
                   src="images/youtube-icon.svg"
@@ -423,8 +411,8 @@
                 />YouTube</a
               >
             </li>
-            <li class="footer__column-link">
-              <a style="color: white; text-decoration: none" href="#"
+            <li>
+              <a class="footer__column-link" href="#" target="_blank"
                 ><img
                   class="footer__social-icon"
                   src="images/vk_color_white.svg"
@@ -433,8 +421,8 @@
                 Вконтакте</a
               >
             </li>
-            <li class="footer__column-link">
-              <a style="color: white; text-decoration: none" href="#"
+            <li>
+              <a class="footer__column-link" href="#" target="_blank"
                 ><img
                   class="footer__social-icon"
                   src="images/tiktok-icon.svg"
