--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               alt="Внимание"
               class="cards__image"
             />
-            <h2 class="cards__title">Два вида внимания</h2>
+            <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">
               Глубокие знания возникают, если чередовать сфокусированное и
               рассеянное мышление
@@ -79,7 +79,7 @@
               alt="Реколл"
               class="cards__image"
             />
-            <h2 class="cards__title">Recall</h2>
+            <h3 class="cards__title">Recall</h3>
             <p class="cards__description">
               Вспоминайте изученное — это позволит соединить разрозненные порции
               памяти
@@ -92,7 +92,7 @@
               alt="Инетрливинг"
               class="cards__image"
             />
-            <h2 class="cards__title">Интерливинг</h2>
+            <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">
               Изучайте несколько навыков одновременно, они обогащают друг друга
             </p>
@@ -104,7 +104,7 @@
               alt="Вопросы"
               class="cards__image"
             />
-            <h2 class="cards__title">Вопросы</h2>
+            <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">
               Слушая преподавателя, придумывайте хороший вопрос, который вас
               действительно волнует
@@ -117,7 +117,7 @@
               alt="Илллюзия компетентности"
               class="cards__image"
             />
-            <h2 class="cards__title">Иллюзия компетентности</h2>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">
               Повторите про себя, запишите, расскажите другу: вам только
               кажется, что вы владеете новой темой
@@ -337,7 +337,7 @@
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <p class="section-subtitle section-subtitle_resources">
+        <p class="section-subtitle">
           Больше материалов о техниках и лайфхаках обучения
         </p>
         <div class="resources__logo-zone">
@@ -385,7 +385,7 @@
         </div>
 
         <nav class="footer__column footer__column_content_info">
-          <h2 class="footer__column-heading">О практикуме</h2>
+          <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
             <li>
               <a class="footer__column-link" href="#">Главная</a>
@@ -400,7 +400,7 @@
         </nav>
 
         <nav class="footer__column footer__column_content_social">
-          <h2 class="footer__column-heading">О практикуме</h2>
+          <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
             <li>
               <a class="footer__column-link" href="#" target="_blank"
